recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
  if (levels==0){
      ^Sierpinski:7: error: missing arguments for method sierpinski in class Sierpinski;
follow this method with `_' if you want to treat it as a partially applied function
    sierpinski
    ^